Create motions.json with summary of motions

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2575,45 +2575,109 @@
     "        \n",
     "def get_betankande_values(bet):\n",
     "    dok = fp.get_in(bet, ['dokumentstatus', 'dokument'])\n",
-    "    dok_data = fp.project(dok, ['dok_id', 'publicerad', 'titel', 'subtitel'])\n",
-    "    try:\n",
-    "        dok_ut = to_list(fp.get_in(bet, ['dokumentstatus', \"dokutskottsforslag\", 'utskottsforslag']))\n",
-    "        dok_ut_data = fp.walk(lambda ut: fp.project(ut, ['punkt', 'rubrik', 'votering_id']), dok_ut)\n",
-    "        dok_bilaga = to_list(fp.get_in(bet, ['dokumentstatus', 'dokbilaga', 'bilaga']))\n",
-    "        attachments =  fp.walk(lambda b: fp.get_in(b, ['fil_url']), dok_bilaga) \n",
-    "        return fp.merge(dok_data, \n",
-    "                        { 'points': dok_ut_data,\n",
-    "                         'attachments': attachments\n",
-    "        })\n",
-    "    except Exception as e:\n",
-    "        print(\"Failed in {}, error: {}\".format(dok_data['dok_id'], e))\n",
-    "        raise e\n",
+    "    dok_data = fp.project(dok, ['dok_id', 'publicerad', 'titel', 'subtitel', 'status'])\n",
+    "    dok_ut = to_list(fp.get_in(bet, ['dokumentstatus', \"dokutskottsforslag\", 'utskottsforslag']))\n",
+    "    dok_ut_data = fp.walk(lambda ut: fp.project(ut, ['punkt', 'rubrik', 'votering_id', 'beslutstyp', 'vinnare']), dok_ut)\n",
+    "    dok_bilaga = to_list(fp.get_in(bet, ['dokumentstatus', 'dokbilaga', 'bilaga']))\n",
+    "    attachments =  [{'url': fp.get_in(b, ['fil_url']), 'titel': fp.get_in(b, ['titel'])} for b in dok_bilaga\n",
+    "                    if b['filtyp'] == 'pdf']\n",
+    "    references = [{'type': r['ref_dok_typ'], 'dok_id': r['ref_dok_id']} \n",
+    "                  for r\n",
+    "                  in to_list(fp.get_in(bet, ['dokumentstatus', 'dokreferens', 'referens']))\n",
+    "                  if r['ref_dok_typ'] in ('mot', 'prop')\n",
+    "                 ]\n",
+    "    return fp.merge(dok_data, \n",
+    "                    { 'points': dok_ut_data,\n",
+    "                     'attachments': attachments,\n",
+    "                     'references': references\n",
+    "                    })\n",
     "\n",
     "betankande = fp.walk(lambda b: (b[1]['dok_id'], b[1]), \n",
     "                                  fp.walk_values(get_betankande_values, fp.compact(betankande_raw)))\n",
     "\n",
-    "json.dumps?\n",
-    "# with open('betankande.json', 'w') as fd:\n",
-    "#     json.dumps(fd, betankande)"
+    "with open('betankande.json', 'w') as fp:\n",
+    "    json.dump(betankande, fp=fp, ensure_ascii=False)\n",
+    "    \n",
+    "# betankande_text = {fp.get_in(d, ['dokumentstatus', 'dokument', 'dok_id']):\n",
+    "#                    {'dok_id': fp.get_in(d, ['dokumentstatus', 'dokument', 'dok_id']),\n",
+    "#                    'html': fp.get_in(d, ['dokumentstatus', 'dokument', 'html'])}\n",
+    "#                   for d in betankande_raw.values()\n",
+    "#                    if d is not None\n",
+    "#                   }\n",
+    "\n",
+    "# with open('betankande_text.json', 'w') as fp:\n",
+    "#     json.dump(betankande_text, fp=fp, ensure_ascii=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "{'dok_id': 'H601UbU21',\n",
+       " 'publicerad': '2019-04-08 12:36:04',\n",
+       " 'titel': 'Ny ordning för att främja god sed och hantera oredlighet i forskning',\n",
+       " 'subtitel': '',\n",
+       " 'points': [{'punkt': '1',\n",
+       "   'rubrik': 'Ny ordning för att främja god sed och hantera oredlighet i forskning',\n",
+       "   'votering_id': None},\n",
+       "  {'punkt': '2',\n",
+       "   'rubrik': 'Uppföljning och utvärdering av den nya ordningen',\n",
+       "   'votering_id': 'f6d28873-6be6-4b25-9ea2-97a91a2be7e4'},\n",
+       "  {'punkt': '3',\n",
+       "   'rubrik': 'Nämnden för hantering av oredlighet i forskning',\n",
+       "   'votering_id': '63ca3ca9-f371-4070-84ab-43d0e72acd44'}],\n",
+       " 'attachments': [{'url': 'http://data.riksdagen.se/fil/50F2A784-6312-4232-8BA6-645554E3458D',\n",
+       "   'titel': 'Ny ordning för att främja god sed och hantera oredlighet i forskning'}],\n",
+       " 'references': [{'type': 'mot', 'dok_id': 'H6023039'},\n",
+       "  {'type': 'mot', 'dok_id': 'H6023041'},\n",
+       "  {'type': 'prop', 'dok_id': 'H60358'}]}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mot_files = os.listdir('raw/mot-2018-2021.json/')\n",
+    "mot_raw = {path.splitext(f)[0]: load_json(path.join('raw/mot-2018-2021.json/', f)) for f in mot_files}\n",
+    "\n",
+    "get = lambda path, col: fp.get_in(col, path)\n",
+    "\n",
+    "def get_mot_values(mot):\n",
+    "    data = get(['dokumentstatus'], mot)\n",
+    "    dok = {'dok_id': get(['dokument', 'dok_id'], data),\n",
+    "           'organ': get(['dokument', 'organ'], data),\n",
+    "           'publicerad': get(['dokument', 'publicerad',] data),\n",
+    "          }\n",
+    "    intressents = to_list(get(['dokintressent', 'intressent'], data))\n",
+    "    intressents_data = [{'intressent_id': get(['intressent_id'], d),\n",
+    "                         'namn': get(['namn'], d),\n",
+    "                         'partibet': get(['partibet'], d)\n",
+    "                        } \n",
+    "                        for d in intressents\n",
+    "                       ]\n",
+    "    dok_bilaga = to_list(fp.get_in(data, ['dokbilaga', 'bilaga']))\n",
+    "    attachments =  [{'url': fp.get_in(b, ['fil_url']), \n",
+    "                     'titel': fp.get_in(b, ['titel'])\n",
+    "                    } for b in dok_bilaga\n",
+    "                      if b['filtyp'] == 'pdf'\n",
+    "                   ]\n",
+    "    references = [{'type': r['ref_dok_typ']\n",
+    "                   , 'dok_id': r['ref_dok_id']\n",
+    "                  } \n",
+    "                  for r in to_list(fp.get_in(data, ['dokreferens', 'referens']))\n",
+    "                  if r['ref_dok_typ'] in ('mot', 'prop')\n",
+    "                 ]\n",
+    "    return fp.merge(dok, {'attachments': attachments, 'references': references})\n",
+    "    \n",
+    "\n",
+    "motions = "
+   ]
   }
  ],
  "metadata": {
