Extract list of people who had ever voted

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
        "Vice ordförande i Riksdagens ansvarsnämnd              1  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,17 +1516,129 @@
     "             for vote in v['votes']\n",
     "            ]\n",
     "\n",
-    "votes_by_voter = fp.group_by(lambda v: v['intressent_id'], flattened)\n",
-    "\n",
-    "len(votes_by_voter)"
+    "votes_by_voter = fp.group_by(lambda v: v['intressent_id'], flattened)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 140,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    }
+   ],
    "source": [
-    "# "
+    "voting_people = people.loc[people.Id.isin(votes_by_voter.keys())]\n",
+    "\n",
+    "def simplify_list(lst):\n",
+    "    if len(lst) == 0:\n",
+    "        return None\n",
+    "    elif len(lst) == 1:\n",
+    "        return lst[0]\n",
+    "    else:\n",
+    "        return lst\n",
+    "    \n",
+    "# voting_people.groupby('Id').agg(fp.rcompose(set, list, simplify_list))\n",
+    "voting_people.set_index('Id', inplace=True )\n",
+    "\n",
+    "role_columns = ['From', 'Tom', 'Status', 'Uppdragsroll', 'Uppdragstyp', 'Uppdragsorgan', 'Uppdragsrollstatus']\n",
+    "\n",
+    "def summarize(group):\n",
+    "    roles = group[role_columns]\n",
+    "    return roles.reset_index().drop('Id', axis=1).to_dict(orient='records')\n",
+    "        \n",
+    "voting_people['roles'] = voting_people[voting_people.Tom > '2020-01-01'].groupby('Id').apply(summarize)\n",
+    "voting_people_summarized = voting_people.drop(role_columns + ['From', 'Tom'], axis=1).groupby('Id').first()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "people_dir = os.path.join('raw', 'person.json')\n",
+    "people_files = os.listdir(people_dir)\n",
+    "people_raw = [load_json(os.path.join(people_dir, f)) for f in people_files]\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "\n",
+    "def get_person_data(raw):\n",
+    "    person = get(['person'], raw)\n",
+    "    if person is None:\n",
+    "        return {'id': None}\n",
+    "    data = {'id': person['intressent_id'],\n",
+    "            'born': person['fodd_ar'],\n",
+    "            'gender': person['kon'],\n",
+    "            'last_name': person['efternamn'],\n",
+    "            'first_name': person['tilltalsnamn'],\n",
+    "            'party': person['parti'],\n",
+    "            'district': person['valkrets'],\n",
+    "            'status': person['status'],\n",
+    "            'image': person['bild_url_max']\n",
+    "           }\n",
+    "    details_raw = to_list(fp.ignore([TypeError],default=None)(get)(['personuppgift', 'uppgift'], person))\n",
+    "    personal_details = {pd['kod'] if pd['typ'] != 'titlar' else 'title-' + pd['kod']: pd['uppgift'] for pd in details_raw}\n",
+    "    roles = [{'organ': r['organ_kod'],\n",
+    "              'role': r['roll_kod'],\n",
+    "              'number': int(r['ordningsnummer']),\n",
+    "              'status': r['status'],\n",
+    "              'type': r['typ'],\n",
+    "              'from': r['from'],\n",
+    "              'to': r['tom']\n",
+    "             } for r in to_list(get(['personuppdrag', 'uppdrag'], person))]\n",
+    "    return fp.merge(data,\n",
+    "                   {'personal_details': personal_details,\n",
+    "                    'roles': roles\n",
+    "                   })\n",
+    "\n",
+    "people = [get_person_data(raw) for raw in people_raw]\n",
+    "people_who_voted = [p for p in people if p['id'] in votes_by_voter.keys()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('people.json', 'w') as f:\n",
+    "    json.dump(fp=f, obj={p['id']: p for p in people_who_voted}, ensure_ascii=False)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0M\tbetankande.json\r\n",
+      "117M\tbetankande_text.json\r\n",
+      "3.6M\tmotions.json\r\n",
+      "4.0K\tpackage.json\r\n",
+      "964K\tpeople.json\r\n",
+      "148K\tpropositions.json\r\n",
+      " 14M\tvotes_by_bet.json\r\n",
+      " 14M\tvotes_by_id.json\r\n",
+      " 54M\tvotes_by_voter.json\r\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
