Add organ to betankande data

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
     "        \n",
     "def get_betankande_values(bet):\n",
     "    dok = fp.get_in(bet, ['dokumentstatus', 'dokument'])\n",
-    "    dok_data = fp.project(dok, ['dok_id', 'publicerad', 'titel', 'subtitel', 'status'])\n",
+    "    dok_data = fp.project(dok, ['dok_id', 'publicerad', 'titel', 'subtitel', 'status', 'organ'])\n",
     "    dok_ut = to_list(fp.get_in(bet, ['dokumentstatus', \"dokutskottsforslag\", 'utskottsforslag']))\n",
     "    dok_ut_data = fp.walk(lambda ut: fp.project(ut, ['punkt', 'rubrik', 'votering_id', 'beslutstyp', 'vinnare']), dok_ut)\n",
     "    dok_bilaga = to_list(fp.get_in(bet, ['dokumentstatus', 'dokbilaga', 'bilaga']))\n",
